fixed alignment in search + fixed issue ie popup

--- a/public/sass/components/_search.scss
+++ b/public/sass/components/_search.scss
@@ -31,7 +31,6 @@
     //padding: 0.5rem 1.5rem 0.5rem 0;
     padding: 1rem 1rem 0.75rem 1rem;
     height: 51px;
-    line-height: 51px;
     box-sizing: border-box;
     outline: none;
     background: $side-menu-bg;
